--- a/dev/styles/helpers/variables.less
+++ b/dev/styles/helpers/variables.less
@@ -1,15 +1,18 @@
-// variables
+// VARIABLES
 
 // colors
 
 @white: #fff;
 @black: #000;
+@blue: #2182ab;
+@red: #c60537;
+@grey-light: #999999;
+@grey-dark: #333333;
+@grey: #ecedef;
 
+// sizes view page
 
-
-// sizes page
-
-@desktop: 1100px;
+@desktop: 1200px;
 @mobile: 320px;
 
 // other variables
