--- a/dev/styles/fonts.css
+++ b/dev/styles/fonts.css
@@ -1,159 +1,79 @@
 @font-face {
-    font-family: 'mullerblack';
-    src: url('../fonts/fontfabric_-_mullerblack.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullerblack.woff') format('woff');
+    font-family: 'open_sansbold';
+    src: url('../fonts/opensans-bold.woff2') format('woff2'),
+         url('../fonts/opensans-bold.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'mullerblack_italic';
-    src: url('../fonts/fontfabric_-_mullerblackitalic.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullerblackitalic.woff') format('woff');
+    font-family: 'open_sansbold_italic';
+    src: url('../fonts/opensans-bolditalic.woff2') format('woff2'),
+         url('../fonts/opensans-bolditalic.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'mullerbold';
-    src: url('../fonts/fontfabric_-_mullerbold.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullerbold.woff') format('woff');
+    font-family: 'open_sansextrabold';
+    src: url('../fonts/opensans-extrabold.woff2') format('woff2'),
+         url('../fonts/opensans-extrabold.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'mullerbold_italic';
-    src: url('../fonts/fontfabric_-_mullerbolditalic.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullerbolditalic.woff') format('woff');
+    font-family: 'open_sansextrabold_italic';
+    src: url('../fonts/opensans-extrabolditalic.woff2') format('woff2'),
+         url('../fonts/opensans-extrabolditalic.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'mullerextrabold';
-    src: url('../fonts/fontfabric_-_mullerextrabold.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullerextrabold.woff') format('woff');
+    font-family: 'open_sansitalic';
+    src: url('../fonts/opensans-italic.woff2') format('woff2'),
+         url('../fonts/opensans-italic.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'mullerextrabold_italic';
-    src: url('../fonts/fontfabric_-_mullerextrabolditalic.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullerextrabolditalic.woff') format('woff');
+    font-family: 'open_sanslight';
+    src: url('../fonts/opensans-light.woff2') format('woff2'),
+         url('../fonts/opensans-light.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'mullerhairline';
-    src: url('../fonts/fontfabric_-_mullerhairline.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullerhairline.woff') format('woff');
+    font-family: 'open_sanslight_italic';
+    src: url('../fonts/opensans-lightitalic.woff2') format('woff2'),
+         url('../fonts/opensans-lightitalic.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'mullerhairline_italic';
-    src: url('../fonts/fontfabric_-_mullerhairlineitalic.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullerhairlineitalic.woff') format('woff');
+    font-family: 'open_sansregular';
+    src: url('../fonts/opensans-regular.woff2') format('woff2'),
+         url('../fonts/opensans-regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'mullerheavy';
-    src: url('../fonts/fontfabric_-_mullerheavy.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullerheavy.woff') format('woff');
+    font-family: 'open_sanssemibold';
+    src: url('../fonts/opensans-semibold.woff2') format('woff2'),
+         url('../fonts/opensans-semibold.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'mullerheavy_italic';
-    src: url('../fonts/fontfabric_-_mullerheavyitalic.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullerheavyitalic.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'mullerlight';
-    src: url('../fonts/fontfabric_-_mullerlight.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullerlight.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'mullerlight_italic';
-    src: url('../fonts/fontfabric_-_mullerlightitalic.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullerlightitalic.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'mullermedium';
-    src: url('../fonts/fontfabric_-_mullermedium.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullermedium.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'mullermedium_italic';
-    src: url('../fonts/fontfabric_-_mullermediumitalic.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullermediumitalic.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'muller_regularregular';
-    src: url('../fonts/fontfabric_-_mullerregular.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullerregular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'mullerregular_italic';
-    src: url('../fonts/fontfabric_-_mullerregularitalic.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullerregularitalic.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'mullerthin';
-    src: url('../fonts/fontfabric_-_mullerthin.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullerthin.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'mullerthin_italic';
-    src: url('../fonts/fontfabric_-_mullerthinitalic.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullerthinitalic.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'mullerultralight';
-    src: url('../fonts/fontfabric_-_mullerultralight.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullerultralight.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'mullerultralight_italic';
-    src: url('../fonts/fontfabric_-_mullerultralightitalic.woff2') format('woff2'),
-         url('../fonts/fontfabric_-_mullerultralightitalic.woff') format('woff');
+    font-family: 'open_sanssemibold_italic';
+    src: url('../fonts/opensans-semibolditalic.woff2') format('woff2'),
+         url('../fonts/opensans-semibolditalic.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
